fix a word-wrap problem

--- a/User/static/css/message_list.css
+++ b/User/static/css/message_list.css
@@ -6,6 +6,17 @@
 .message-list-single .message-list-top-head-img .head-img{
     padding:0;
 }
+.message-list-single p{
+    max-width:46.8%;
+}
+@media (min-width: 992px){
+    .message-list-single p{
+        max-width: 100%;
+        -ms-word-wrap: break-word;
+        word-wrap: break-word;
+
+    }
+}
 .message-list-single .message-list-top-head-img{
     padding:0;
     text-align: center;
